<resources>
    <string name="app_name">IntentAngga</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH DENGAN DATA</string>
    <string name="dial_nummber">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_blue">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="_red">MERAH</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITY</string>
    <string name="this_ismove_first_page_activity">INI HALAMAN UTAMA</string>
    <string name="move_first_page">PINDAH HALAMAN UTAMA</string>
</resources>