<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizintal_margin"
        android:layout_marginRight="@dimen/activity_horizintal_margin"
        android:id="@+id/btn_move_activity" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizintal_margin"
        android:layout_marginRight="@dimen/activity_horizintal_margin"
        android:id="@+id/btn_move_with_data" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_nummber"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizintal_margin"
        android:layout_marginRight="@dimen/activity_horizintal_margin"
        android:id="@+id/btn_dial_number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_result"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizintal_margin"
        android:layout_marginRight="@dimen/activity_horizintal_margin"
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/btn_move_for_result" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_from_activity"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="@dimen/activity_horizintal_margin"
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/tv_result" />
</LinearLayout>